--- a/mypy.ini
+++ b/mypy.ini
@@ -15,3 +15,6 @@ ignore_missing_imports = True
 
 [mypy-anthropic.*]
 ignore_missing_imports = True
+
+[mypy-requests.*]
+ignore_missing_imports = True
