--- a/.github/workflows/docker-site.yml
+++ b/.github/workflows/docker-site.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Build and push with cache
         uses: docker/build-push-action@v6
         with:
-          context: ./invoice-app
+          context: .
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
